Changelog for pdoTools.

2.1.0 pl
==============
- Updated Fenom to version 2.7.1.

2.0.5 pl
==============
- [#132] Fixed possible E_WARNING on empty chunks.
- [#122] Ability to use 3rd party pdoPage and pdoMenu classes.
- [#118] [pdoPage] Fixed parameter &offset.
- [pdoPage] Fixed default CSS classes in "empty" chunks.

2.0.4 pl
==============
- Fixed processing of "pdotools_fenom_cache" system setting.

2.0.3 pl
==============
- [#125] [pdoTitle] Fixed parameter &id.

2.0.2 pl
==============
- Improved processing of @FILE binding.

2.0.1 pl
==============
- Fixed possible E_WARNING on line 319 and 349 of pdoTools class.
- Disabled system option "pdotools_fenom_modx" by default due to security issues.

2.0.0 pl
==============
- New system settings to control the Fenom.
- Ability to enable caching of Fenom compiled chunks.
- Improved handling of parameter "cache_key".
- [pdoMenu] Improved work when &cache is enabled.

2.0.0 rc2
==============
- Compiled Fenom templates cached to RAM instead of HDD.
- Removed plugin pdoTools.

2.0.0 rc1
==============
- Added Fenom template engine.
- Fenom enabled by default.
- pdoParser uses Fenom to process pages.

1.11.2 pl
==============
- [#116] [pdoTitle] Disabled &register_js by default.

1.11.1 pl
==============
- [pdoSitemap] Fixed default url scheme after last update.

1.11.0 pl1
==============
- [pdoTitle] Added new snippet.
- [pdoPage] Added support of snippet pdoTitle when &ajaxMode is enabled.
- [pdoPage] Prevent overwriting of scripts and styles of nested &element by default parameters.
- [pdoPage] Added triggering javascript event "pdopage_load".

1.10.2 pl1
==============
- [#112] Parameter &scheme was set to system default in all snippets.
- [#111] [pdoPage] Added ability to set "prev" & "next" meta tags.
- [#107] [pdoNeighbors] Added ability to specify &parents for work.
- [#106] [pdoMenu] Fixed "hereClass" and "selfClass" enabled &useWeblinkUrl parameter.